--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,32 @@
+import groovy.sql.Sql
+
 apply plugin: 'war'
 	
 assert System.env.JBOSS_HOME!=null	
-	
+
+
+repositories {
+	mavenCentral()
+}
+
+
+configurations {
+	jdbcdriver
+}
+
 dependencies {
 	providedCompile files("$System.env.JBOSS_HOME/modules/system/layers/base/javax/inject/api/main/javax.inject-1.jar",
-				          "$System.env.JBOSS_HOME/modules/system/layers/base/javax/enterprise/api/main/cdi-api-1.1.jar"
-			        )
+				          "$System.env.JBOSS_HOME/modules/system/layers/base/javax/enterprise/api/main/cdi-api-1.1.jar")
+	jdbcdriver 'com.h2database:h2:1.3.173','org.postgresql:postgresql:9.3-1100-jdbc41'
+	
 }
+
+//we need this hack to satisfy classloading conditions of java.sql.DriverManager
+URLClassLoader loader = GroovyObject.class.classLoader
+configurations.jdbcdriver.each {File file ->
+	loader.addURL(file.toURI().toURL())
+}
+
 
 task buildId << {	
 	buildDir.mkdirs()
@@ -50,4 +70,17 @@ task deploy(dependsOn: war, type: Copy) {
 		}
 }
 	
+task show << {
+	buildscript.configurations.classpath.each { println it }
+ }
+
+
+task initdb(dependsOn: show) << {
+	new File("${System.properties.'user.home'}/system.properties").withInputStream {
+		System.properties.load(it)
+	}
+	sql=Sql.newInstance("${System.properties.'exampleds.jdbc.url'}",
+					    "${System.properties.'exampleds.user'}",
+						"${System.properties.'exampleds.password'}")
+}
 
