--- a/build.gradle
+++ b/build.gradle
@@ -5,14 +5,16 @@ apply plugin: 'war'
 assert System.env.JBOSS_HOME!=null	
 
 
+
 repositories {
 	mavenCentral()
 }
 
-
 configurations {
 	jdbcdriver
 }
+
+
 
 dependencies {
 	providedCompile files("$System.env.JBOSS_HOME/modules/system/layers/base/javax/inject/api/main/javax.inject-1.jar",
@@ -21,7 +23,8 @@ dependencies {
 	
 }
 
-//we need this hack to satisfy classloading conditions of java.sql.DriverManager
+
+//we need the hack to satisfy the classloader conditions for javax.sql.DriverManager
 URLClassLoader loader = GroovyObject.class.classLoader
 configurations.jdbcdriver.each {File file ->
 	loader.addURL(file.toURI().toURL())
@@ -79,7 +82,7 @@ task initdb(dependsOn: show) << {
 	new File("${System.properties.'user.home'}/system.properties").withInputStream {
 		System.properties.load(it)
 	}
-	sql=Sql.newInstance("${System.properties.'exampleds.jdbc.url'}",
+	def sql=Sql.newInstance("${System.properties.'exampleds.jdbc.url'}",
 					    "${System.properties.'exampleds.user'}",
 						"${System.properties.'exampleds.password'}")
 }
