--- a/build.gradle
+++ b/build.gradle
@@ -18,7 +18,10 @@ configurations {
 
 dependencies {
 	providedCompile files("$System.env.JBOSS_HOME/modules/system/layers/base/javax/inject/api/main/javax.inject-1.jar",
-				          "$System.env.JBOSS_HOME/modules/system/layers/base/javax/enterprise/api/main/cdi-api-1.1.jar")
+				          "$System.env.JBOSS_HOME/modules/system/layers/base/javax/enterprise/api/main/cdi-api-1.1.jar",
+						  "$System.env.JBOSS_HOME/modules/system/layers/base/javax/validation/api/main/validation-api-1.1.0.Final.jar",
+						  "$System.env.JBOSS_HOME/modules/system/layers/base/javax/persistence/api/main/hibernate-jpa-2.1-api-1.0.0.Final.jar")
+
 	jdbcdriver 'com.h2database:h2:1.3.173','org.postgresql:postgresql:9.3-1100-jdbc41'
 	
 }
@@ -59,6 +62,7 @@ war.dependsOn buildId
 war {
 	metaInf { 
 		from "$buildDir/build_id.txt" 
+		from "$projectDir/src/main//resources/META-INF/persistence.xml"
 	}
 }
 
@@ -79,16 +83,17 @@ task show << {
  }
 
 
-task initdb(dependsOn: show) << {
+task droptables(dependsOn: show) << {
 	new File("${System.properties.'user.home'}/system.properties").withInputStream {
 		System.properties.load(it)
 	}
+	println "connecting to database: ${System.properties.'exampleds.jdbc.url'}\nas user: ${System.properties.'exampleds.user'}"
 	def sql= Sql.newInstance("${System.properties.'exampleds.jdbc.url'}",
 					    "${System.properties.'exampleds.user'}",
 						"${System.properties.'exampleds.password'}")
-	sql.execute("drop table task if exists")
-	sql.execute("create table task (id int primary key, subject varchar(80), description varchar(800))")
-	sql.execute("insert into task values (1, 'nullpointer exception on start', 'type start and hit return')")
+	sql.execute("drop table tracks if exists")
+	sql.execute("drop table users if exists")
+	sql.execute("drop table components if exists")
 	sql.close()
 }
 
