--- a/build.gradle
+++ b/build.gradle
@@ -39,7 +39,7 @@ println "jdbc drivers: "+Class.forName("org.h2.Driver")+", "+Class.forName("org.
 task buildId << {	
 	buildDir.mkdirs()
 	// generate timestamp and user for build_id
-	def build_id=new Date().format('yyyyMMdd HHmm ')+System.properties.'user.name'
+	def build_id='B'+new Date().format('yyyyMMdd HHmm ')+System.properties.'user.name'
 	
 	try {
 		// get git status und ref
@@ -47,7 +47,7 @@ task buildId << {
 		def gittag="git describe --tags --always $gitref".execute().text.trim()
 		//if(gitref!=gittag) { gitref="$gittag $gitref"}
 		def gitdirty="git status --porcelain".execute().text.isEmpty()?" ":"*"
-		build_id+=" $gittag$gitdirty"
+		build_id=" $gittag$gitdirty "+build_id;
 	}
 	catch (Exception x) {
 		println "Warning: no git executable, using simple buildId"
@@ -99,6 +99,10 @@ task loadDB(dependsOn: deploy) << {
 	sql.execute("insert into products (name) values ('Database')")
 	sql.execute("insert into products (name) values ('GUI')")
 	sql.execute("insert into products (name) values ('Workflow')")
+	sql.execute("insert into bugs (created, description, lastchange, state, title, assignee_userid, product_productid, reporter_userid) values ('2014-06-18 09:21:25.5', 'finance needs new column totals', '2014-06-18 09:21:25.5', 'NEW', 'missing column totals', 3, 1, 2)")
+	sql.execute("insert into bugs (created, description, lastchange, state, title, assignee_userid, product_productid, reporter_userid) values ('2014-06-18 09:22:15.6', 'user names should be autocompleted', '2014-06-18 09:22:15.6', 'NEW', 'autocomplete on names', 2, 2, 1)")
+	sql.execute("insert into bugs (created, description, lastchange, state, title, assignee_userid, product_productid, reporter_userid) values ('2014-06-18 09:23:51.519', 'workflow steps approve and commit must be switched ', '2014-06-18 09:23:51.519', 'ASSIGNED', 'switch steps approve and commit', 1, 3, 3)")
+	sql.execute("insert into bugs (created, description, lastchange, state, title, assignee_userid, product_productid, reporter_userid) values ('2014-06-18 09:24:49.507', 'table headers are missing on table sales', '2014-06-18 09:24:49.507', 'FIXED', 'show table headers', 3, 2, 2)")
 	sql.close()
 }
 
