--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 import groovy.sql.Sql
 
 apply plugin: 'war'
+apply plugin: 'groovy'
 	
 assert System.env.JBOSS_HOME!=null	
 
@@ -27,6 +28,9 @@ dependencies {
 						  "$System.env.JBOSS_HOME/modules/system/layers/base/javax/persistence/api/main/hibernate-jpa-2.1-api-1.0.0.Final.jar")
 
 	jdbcdriver 'com.h2database:h2:1.3.173','org.postgresql:postgresql:9.3-1100-jdbc41'
+	
+	testCompile 'org.codehaus.groovy:groovy:2.0.6'
+	testCompile 'org.spockframework:spock-core:0.7-groovy-2.0'
 	
 }
 
