added default/error page

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -29,6 +29,9 @@
         <welcome-file>index.xhtml</welcome-file>
     </welcome-file-list>
     <error-page>
-        <location>index.xhtml</location>
+        <location>default.xhtml</location>
     </error-page>
+    <session-config>
+        <session-timeout>1</session-timeout>
+    </session-config>
 </web-app>
